cmake_minimum_required(VERSION 3.19)
project(c)

set(CMAKE_CXX_STANDARD 14)

include_directories(include)
include_directories(src)

add_executable(c
        include/fiber_base.h
        include/fiber_channel.h
        include/fiber_cond.h
        include/fiber_define.h
        include/fiber_event.h
        include/fiber_hook.h
        include/fiber_lock.h
        include/fiber_sem.h
        include/lib_fiber.h
        include/libfiber.h
        src/boost/jump_arm64_aapcs_macho_gas.S
        src/boost/make_arm64_aapcs_macho_gas.S
        src/boost/ontop_arm64_aapcs_macho_gas.S
        src/boost/setjmp.S
        src/argv.c
        src/argv.h
        src/array.c
        src/array.h
        src/atomic.c
        src/atomic.h
        src/avl.c
        src/avl.h
        src/avl_impl.h
        src/boost_jmp.h
        src/channel.c
        src/close_on_exec.c
        src/common.h
        src/define.h
        src/doze.c
        src/epoll.c
        src/event.c
        src/event.h
        src/event_epoll.c
        src/event_epoll.h
        src/event_iocp.c
        src/event_iocp.h
        src/event_kqueue.c
        src/event_kqueue.h
        src/event_poll.c
        src/event_poll.h
        src/event_select.c
        src/event_select.h
        src/event_wmsg.c
        src/event_wmsg.h
        src/exp_jmp.h
        src/fbase_event.c
        src/fiber.c
        src/fiber.h
        src/fiber_cond.c
        src/fiber_event.c
        src/fiber_io.c
        src/fiber_lock.c
        src/fiber_sem.c
        src/fiber_unix.c
        src/fiber_win.c
        src/fifo.c
        src/fifo.h
        src/file_event.c
        src/getaddrinfo.c
        src/gethostbyname.c
        src/gettimeofday.c
        src/gettimeofday.h
        src/hook.c
        src/hook.h
        src/htable.c
        src/htable.h
        src/init.c
        src/init.h
        src/io.c
        src/iostuff.h
        src/iterator.h
        src/memory.c
        src/memory.h
        src/msg.c
        src/msg.h
        src/non_blocking.c
        src/open_limit.c
        src/poll.c
        src/pthread_patch.c
        src/pthread_patch.h
        src/read_wait.c
        src/resolver.c
        src/resolver.h
        src/rfc1035.c
        src/rfc1035.h
        src/ring.c
        src/ring.h
        src/sane_inet.c
        src/sane_inet.h
        src/sane_socket.c
        src/sane_socket.h
        src/select.c
        src/socket.c
        src/socketpair.c
        src/stdafx.c
        src/stdafx.h
        src/strops.c
        src/strops.h
        src/tcp_nodelay.c
        src/timer_cache.c
        src/timer_cache.h
        src/unix_jmp.h
        src/valid_hostname.c
        src/valid_hostname.h)
